# GreenNet

./: .chatgpt_bundle_filelist.txt  .gitignore  BUNDLE_NOTES.md  CHATGPT_BUNDLE_NOTES.md  CNAME  COMMANDS.md  GreenNet_FirstDraft_OltaZagraxha.docx  GreenNet_Project_Proposal.docx  README.md  SUBMISSION_INDEX.md  Steps Calculation_UPDATED.docx  Terminal Saved Output_V1.txt  Terminal_Output.txt  agent_mode_tests.md  api_app.py  baselines.py  bundle_filelist.txt  eval.py  eval_burst_v2_08.json  evaluate_checkpoints.py  out1.txt  package-lock.json  package.json  pyproject.toml  resume_latest.py  resume_training.py  run_experiment.py  train.py  train_300k.json  train_hotspot.json
_exports/chatgpt_review_bundle_20260409/: CHATGPT_REVIEW_INSTRUCTIONS.md  COMMANDS.md  README.md  eval_hotspot.json  pyproject.toml
_exports/chatgpt_review_bundle_20260409/artifacts/final_pretraffic/: eval_200eps.txt
_exports/chatgpt_review_bundle_20260409/configs/: README.md  train_burst.json  train_normal.json
_exports/chatgpt_review_bundle_20260409/dashboard/: VERIFY_INSTRUCTIONS.txt  models.py  page_compare.py  topology_viz.py
_exports/chatgpt_review_bundle_20260409/docs/: final_submission_overview.md
_exports/chatgpt_review_bundle_20260409/experiments/: final_evaluation.py  final_pipeline.py  prune_log_20260124_234534.txt  prune_log_20260124_235820.txt  prune_log_20260124_235825.txt  prune_log_20260124_235837.txt  prune_log_20260124_235848.txt  prune_log_20260125_000050.txt  prune_log_20260125_000106.txt
_exports/chatgpt_review_bundle_20260409/final_audit/: REPORT_FINAL_AUDIT.md
_exports/chatgpt_review_bundle_20260409/frontend/: README.md  package.json
_exports/chatgpt_review_bundle_20260409/greennet/: __init__.py
_exports/chatgpt_review_bundle_20260409/greennet/rl/: eval.py
_exports/chatgpt_review_bundle_20260409/scripts/: eval_forecasters.py
(+855 files in other folders)
