[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greennet"
version = "0.1.0"
description = "GreenNet: RL-based energy- and carbon-aware routing with lightweight NetworkX simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29",
  "stable-baselines3>=2.0",
  "networkx>=3.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "plotly>=5.0",
  "streamlit>=1.30",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["greennet*"]
exclude = ["dashboard*", "runs*", "ml-env*", ".venv*"]