[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greennet"
version = "0.1.0"
description = "GreenNet: RL-based energy- and carbon-aware routing with lightweight NetworkX simulation"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "gymnasium>=0.29",
  "stable-baselines3>=2.0",
  "networkx>=3.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "plotly>=5.0",
  "streamlit>=1.30",
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "httpx>=0.27",
]
train = [
  "torch>=2.0",
  "sb3-contrib>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["greennet*"]
exclude = ["dashboard*", "runs*", "ml-env*", ".venv*"]

[tool.setuptools.package-data]
greennet = ["data/topologies/*.json", "data/traffic/*.json"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "integration: tests that exercise multiple modules or file-backed flows",
  "regression: deterministic checks for fixed scenarios and artifacts",
]
